--- a/lab6.html
+++ b/lab6.html
@@ -1,13 +1,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Apple</title>
+        <title>Apple product</title>
         <link rel="stylesheet" href="lab6.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="description" content="Apple product"/>
+        <meta name="keywords" content="Apple product, iPhone, iPad" />
     </head>
     <body>
         <header>
-            <div1><i class="fa fa-apple"></i></div1> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div1>
+                <i class="fa fa-apple"></i>
+            </div1> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div1>Store</div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div1>Mac</div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div1>iPad</div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -18,14 +22,20 @@
             <div1>Only on Apple</div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div1>Accessories</div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div1>Support</div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <div1><i class="fa fa-search"></i></div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <div1><i class="fa fa-shopping-bag"></i></div1>
+            <div1>
+                <i class="fa fa-search"></i>
+            </div1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div1>
+                <i class="fa fa-shopping-bag"></i>
+            </div1>
         </header>
         <div class="bd">
         <div2>
-            <img src="lab6pic/pad1.jpg">
+            <img src="lab6pic/pad1.jpg" alt="Apple product, iPad ">
             <div class="ipadtext">
-                <div class="ipad"><strong>iPad</strong></div>
+                <div class="ipad">
+                    <h1>iPad</h1>
+                </div>
                 <div class="lovable">Lovable.Drawable.Magical.</div><br/>
                 <div class="link1">
                     <a href="learnmore.html">Learn more &gt;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -34,10 +44,14 @@
             </div>
         </div2><br/><br/><br/>
         <div class="div3">
-            <img src="lab6pic/2.jpg">
+            <img src="lab6pic/2.jpg" alt="Apple product, iPad Pro">
             <div class="ipadtext2">
-                <div class="ipad2"><strong>iPad Pro</strong></div>
-                <div class="lovable2">Super charged by <img src="lab6pic/m2_logo__90ungfqgnsiu_large.png"></div><br/>
+                <div class="ipad2">
+                    <h1>iPad Pro</h1>
+                </div>
+                <div class="lovable2">Super charged by 
+                    <img src="lab6pic/m2_logo__90ungfqgnsiu_large.png" alt="Apple product, logo">
+                </div><br/>
                 <div class="link1">
                     <a href="learnmore.html">Learn more &gt;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="buy">Buy &gt;</a>
@@ -45,9 +59,11 @@
             </div>
         </div><br/>
         <div class="div4">
-            <img src="lab6pic/9.jpg">
+            <img src="lab6pic/9.jpg" alt="Apple product, iPhone14 Pro">
             <div class="ipadtext3">
-                <div class="ipad3"><strong>iPhone 14 Pro</strong></div>
+                <div class="ipad3">
+                    <h1>iPhone 14 Pro</h1>
+                </div>
                 <div class="lovable3">Pro.Beyond.</div><br/>
                 <div class="link1">
                     <a href="learnmore.html">Learn more &gt;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -56,18 +72,24 @@
             </div>
         </div>
         <div class="gallery">
-            <img src="lab6pic/3.jpg">
+            <img src="lab6pic/3.jpg" alt="Apple product, iPhone14">
                 <div class="ipadtext4">
-                    <div class="ipad4"><strong>iPhone 14</strong></div>
+                    <div class="ipad4">
+                        <h1>iPhone 14</h1>
+                    </div>
                     <div class="lovable4">Big and Bigger.</div><br/>
                     <div class="link1">
                         <a href="learnmore.html">Learn more &gt;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a href="buy">Buy &gt;</a>
                     </div>
                 </div>
-            <img src="lab6pic/4.jpg">
+            <img src="lab6pic/4.jpg" alt="Apple product, TV ">
                 <div class="ipadtext5">
-                    <div class="ipad5"><strong><i class="fa fa-apple"></i> TV4k</strong></div>
+                    <div class="ipad5">
+                        <h1>
+                            <i class="fa fa-apple"></i> TV4k
+                        </h1>
+                    </div>
                     <div class="lovable5">The apple experience.</div>
                     <div class="lovable5">Cinematic in every sense.</div><br/>
                     <div class="love5">Available starting 11.4</div><br/>
@@ -76,9 +98,13 @@
                         <a href="buy">Buy &gt;</a>
                     </div>
                 </div>
-            <img src="lab6pic/5.jpg">
+            <img src="lab6pic/5.jpg" alt="Apple product, watch">
                 <div class="ipadtext6">
-                    <div class="ipad6"><strong><i class="fa fa-apple"></i> Watch</strong></div>
+                    <div class="ipad6">
+                        <h1>
+                            <i class="fa fa-apple"></i> Watch
+                        </h1>
+                    </div>
                     <div class="love6">Ultra</div>
                     <div class="lovable6">Adventure awaits.</div><br/>
                     <div class="link1">
@@ -86,9 +112,13 @@
                         <a href="buy">Buy &gt;</a>
                     </div>
                 </div>
-            <img src="lab6pic/6.jpg">
+            <img src="lab6pic/6.jpg" alt="Apple product, watch">
                 <div class="ipadtext7">
-                    <div class="ipad7"><strong><i class="fa fa-apple"></i> Watch</strong></div>
+                    <div class="ipad7">
+                        <h1>
+                            <i class="fa fa-apple"></i> Watch
+                        </h1>
+                    </div>
                     <div class="love7">Series 8</div>
                     <div class="lovable7">A healthy leap ahead.</div><br/>
                     <div class="link1">
@@ -96,9 +126,12 @@
                         <a href="buy">Buy &gt;</a>
                     </div>
                 </div>
-            <img src="lab6pic/7.jpg">
+            <img src="lab6pic/7.jpg" alt="Apple product, fitness">
                 <div class="ipadtext8">
-                    <div class="ipad8"><strong><i class="fa fa-apple"></i> Fitness+</strong></div>
+                    <div class="ipad8">
+                        <h1>
+                            <i class="fa fa-apple"></i> Fitness+
+                        </h1></div>
                     <div class="lovable8">Fitness for everyone.</div>
                     <div class="lovable8">Now all you need is iPhone.</div><br/>
                     <div class="link1">
@@ -106,9 +139,13 @@
                         <a href="buy">Try it free &#8599;</a>
                     </div>
                 </div>
-            <img src="lab6pic/8.jpg">
+            <img src="lab6pic/8.jpg" alt="Apple product, card">
                 <div class="ipadtext9">
-                    <div class="ipad9"><strong><i class="fa fa-apple"></i> Card</strong></div>
+                    <div class="ipad9">
+                        <h1>
+                            <i class="fa fa-apple"></i> Card
+                        </h1>
+                    </div>
                     <div class="lovable9">Get up to 3% Daily Cash back</div>
                     <div class="lovable9">with every purchase.</div><br/>
                     <div class="link1">
@@ -132,7 +169,9 @@
             </div>
             <div id="container">
                 <div class="column1">
-                    <div><strong>Shop and Learn</strong></div><br/>
+                    <div>
+                        <strong>Shop and Learn</strong>
+                    </div><br/>
                     <div>Store</div><br/>
                     <div>Mac</div><br/>
                     <div>iPad</div><br/>
@@ -145,7 +184,9 @@
                     <div>Gift Cards</div><br/>
                 </div>
                 <div class="column2">
-                    <div><strong>Services</strong></div><br/>
+                    <div>
+                        <strong>Services</strong>
+                    </div><br/>
                     <div>Apple music</div><br/>
                     <div>Apple TV+</div><br/>
                     <div>Apple Fitness+</div><br/>
@@ -163,7 +204,9 @@
                     <div>iCloud.com</div><br/>
                 </div>
                 <div class="column3">
-                    <div><strong>Apple Store</strong></div><br/>
+                    <div>
+                        <strong>Apple Store</strong>
+                    </div><br/>
                     <div>Find a Store</div><br/>
                     <div>Genius Bar</div><br/>
                     <div>Today at Apple</div><br/>
@@ -176,23 +219,33 @@
                     <div>Shopping Help</div><br/>
                 </div>
                 <div class="column4">
-                    <div><strong>For Business</strong></div><br/>
+                    <div>
+                        <strong>For Business</strong>
+                    </div><br/>
                     <div>Apple and Business</div><br/>
                     <div>Shop for Business</div><br/><br/>
-                    <div><strong>For Education</strong> </div><br/>
+                    <div>
+                        <strong>For Education</strong> 
+                    </div><br/>
                     <div>Apple and Education</div><br/>
                     <div>Shop for K-12</div><br/>
                     <div>Shop for College</div><br/><br/>
-                    <div><strong>For Healthcare</strong></div><br/>
+                    <div>
+                        <strong>For Healthcare</strong>
+                    </div><br/>
                     <div>Apple in Healthcare</div><br/>
                     <div>Health on Apple Watch</div><br/>
                     <div>Health Records on iPhone</div><br/><br/>
-                    <div><strong>For Government</strong></div><br/>
+                    <div>
+                        <strong>For Government</strong>
+                    </div><br/>
                     <div>Shop for Government</div><br/>
                     <div>Shop for Veterans and Military</div><br/>
                 </div>
                 <div class="column5">
-                    <div><strong>Apple Values</strong></div><br/>
+                    <div>
+                        <strong>Apple Values</strong>
+                    </div><br/>
                     <div>Accessibility</div><br/>
                     <div>Education</div><br/>
                     <div>Environment</div><br/>
@@ -200,7 +253,9 @@
                     <div>Privacy</div><br/>
                     <div>Racial Equity and Justice</div><br/>
                     <div>Supplier Responsibility</div><br/><br/>
-                    <div><strong>About Apple</strong></div><br/>
+                    <div>
+                        <strong>About Apple</strong>
+                    </div><br/>
                     <div>Newsroom</div><br/>
                     <div>Apple Leadership</div><br/>
                     <div>Career Opportunities</div><br/>
