--- a/lab6.html
+++ b/lab6.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Apple product</title>
+        <title>Apple product iin talaar iluu ihiig medehiig huswel iishee zochilno uu.</title>
         <link rel="stylesheet" href="lab6.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="description" content="Apple product"/>
